force-app/main/default/objects/Activity/fields/CazoomiId__c.field-meta.xml
<CustomField>
    <fullName>CazoomiId__c</fullName>
    <description>CazoomiId</description>
    <externalId>true</externalId>
    <label>Activity CazoomiId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>