force-app/main/default/objects/Activity/fields/CL_Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>CL_Call_Duration__c</fullName>
    <label>CL Call Duration</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>