force-app/main/default/objects/Activity/fields/CL_Caller_ID__c.field-meta.xml
<CustomField>
    <fullName>CL_Caller_ID__c</fullName>
    <label>CL Caller ID</label>
    <type>Phone</type>
</CustomField>