force-app/main/default/objects/Activity/fields/CL_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>CL_Report_Name__c</fullName>
    <label>CL Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>