force-app/main/default/objects/Activity/fields/CL_Type__c.field-meta.xml
<CustomField>
    <fullName>CL_Type__c</fullName>
    <label>CL Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Koncert</fullName>
            </value>
            <value>
                <fullName>Non - Koncert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>