force-app/main/default/objects/Activity/fields/CL_Wrap_Time__c.field-meta.xml
<CustomField>
    <fullName>CL_Wrap_Time__c</fullName>
    <label>CL Wrap Time</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>