force-app/main/default/objects/Activity/fields/MPM4_BASE__Project_Task_ID__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Task_ID__c</fullName>
    <externalId>true</externalId>
    <label>Project Task ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>